# robot-game

./: .gitignore  CLAUDE.md  Cargo.toml  adapter.js  build-wasm.sh  characters.js  dialogue.js  game.js  index.html  package-lock.json  package.json  rollup.config.js  sprites.js  wasm-bridge.js  world.js
.github/workflows/: static.yml  test.yml
docs/: adaptive-learning-spec.md  adaptive-wiring-spec.md  architecture-spec.md  band-blending-spec.md  burn-the-bridge-spec.md  challenge-lifecycle-spec.md  challenge-simulator-spec.md  cli-simulator-spec.md  debroccoli-spec.md  dev-zone-spec.md  dum-dum-economy-spec.md  e2e-readiness-assessment.md  genai-spec.md  interaction-model-spec.md  logic-puzzles-spec.md  macroquad-migration-checklist.md  mvp-adaptive-engine.md  native-speech-spec.md  npc-interaction-menu-spec.md  operation-taxonomy-spec.md  parity-fixes.md  per-subskill-bands-spec.md  playtest-session-analysis.md  post-playtest-fixes.md  presentation-migration.md  rpg-quest-spec.md  rust-wasm-migration-spec.md  shosh-session-analysis.md  tap-to-move-spec.md  ten-frames-and-encounters-spec.md  visualization-methods-spec.md  voice-input-impl-spec.md  zone-system-spec.md
docs/adr/: 001-band-blending.md  002-headless-test-harness.md
docs/examples/: reducer-vs-mutable.js
robot-buddy-domain/: Cargo.toml
robot-buddy-domain/src/: lib.rs  types.rs
robot-buddy-domain/src/challenge/: challenge_state.rs  mod.rs
robot-buddy-domain/src/economy/: give.rs  interaction_options.rs  mod.rs  rewards.rs
robot-buddy-domain/src/learning/: challenge_generator.rs  frustration_detector.rs  intake_assessor.rs  learner_profile.rs  mod.rs  operation_stats.rs  rolling_window.rs
robot-buddy-domain/src/logic/: kenken.rs  mod.rs
robot-buddy-domain/src/world/: movement.rs
robot-buddy-game/: Cargo.toml  index.html
robot-buddy-game/src/: game.rs  input.rs  lib.rs  main.rs  npc.rs  save.rs  session.rs  settings.rs  tilemap.rs
robot-buddy-game/src/audio/: tts.rs
robot-buddy-game/src/sprites/: mod.rs  npcs.rs  player.rs  robot.rs
robot-buddy-game/src/ui/: challenge.rs  dialogue.rs  hud.rs  interaction_menu.rs  kenken.rs  mod.rs  settings_overlay.rs  title_screen.rs  visuals.rs
robot-buddy-game/tests/: headless.rs  story.rs
robot-buddy-game/tests/common/: mod.rs
robot-buddy-game/www/: index.html
src/: domain-bridge.js
src/domain/challenge/: challenge-state.js  index.js
src/domain/economy/: give.js  index.js  interaction-options.js  rewards.js
src/domain/learning/: challenge-generator.js  frustration-detector.js  index.js  intake-assessor.js  (+3 more)
src/infrastructure/: speech-recognition.js
src/presentation/: dev-zone.js
test/infrastructure/: speech-recognition.test.js
test/integration/: wasm-bridge.test.js
tools/: simulate.js
(+15 files in other folders)
