[package]
name = "robot-buddy-domain"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "simulate"
path = "src/bin/simulate.rs"

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = { version = "0.8", features = ["small_rng"] }
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
rand = { version = "0.8", features = ["small_rng"] }

[profile.release]
opt-level = "s"
lto = true
