[package]
name = "robot-buddy-domain"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "simulate"
path = "src/bin/simulate.rs"

[features]
wasm-bridge = ["dep:wasm-bindgen", "dep:getrandom"]

[dependencies]
wasm-bindgen = { version = "0.2", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = { version = "0.8", default-features = false, features = ["small_rng"] }
getrandom = { version = "0.2", features = ["js"], optional = true }

[dev-dependencies]
rand = { version = "0.8", default-features = false, features = ["small_rng"] }

[profile.release]
opt-level = "s"
lto = true
