[package]
name = "robot-buddy-domain"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "simulate"
path = "src/bin/simulate.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = { version = "0.8", default-features = false, features = ["small_rng"] }

[dev-dependencies]
rand = { version = "0.8", default-features = false, features = ["small_rng"] }

[profile.release]
opt-level = "s"
lto = true
