[package]
name = "robot-buddy-game"
version = "0.1.0"
edition = "2021"

[dependencies]
robot-buddy-domain = { path = "../robot-buddy-domain" }
macroquad = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = { version = "0.8", default-features = false, features = ["small_rng"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = [
    "Window", "Storage",
] }
wasm-bindgen = "0.2"
js-sys = "0.3"
