[package]
name = "robot-buddy-game"
version = "0.1.0"
edition = "2021"

[dependencies]
robot-buddy-domain = { path = "../robot-buddy-domain" }
macroquad = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = { version = "0.8", default-features = false, features = ["small_rng"] }

# No wasm-specific deps — macroquad uses sapp-wasm, not wasm-bindgen.
# localStorage access is via extern "C" functions defined in index.html.
